# Deep-Learning-libary-from-scratch

./: .gitignore  CMakeLists.txt  README.md
benchmark/: deepmodel_benchmark.cpp
headers/: DeepModel.h  activation.h  backend.h  benchmark.h  matrix.h  model.h  tensor.h  tensorCPU.h  vector.h
headers/CPU/: activationCPU.h  matrixCPU.h  modelCPU.h  tensorCPU.h
headers/CUDA/: activationCUDA.cuh  kernel.cuh  matrixCUDA.cuh
src/: benchmark.cpp  dataset.cpp  main.cpp  neuralnetwork.cpp  tensor.cpp  tensorCPU.cpp
src/CPU/: activationCPU.cpp  dataset.cpp  datasetCPU.cpp  matrixCPU.cpp  memory_poolCPU.cpp  modelCPU.cpp  neuralnetworkCPU.cpp  tensorCPU.cpp
src/CUDA/: activationCUDA.cu  kernel.cu  matrixCUDA.cu  memory_poolCUDA.cu
